[package]
name = "git-submerge"
description = "Merges Git submodule into the repo, as if they've never been separate at all"
version = "0.5.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
repository = "https://github.com/Minoru/git-submerge"
readme = "README.markdown"
license = "BSD-3-Clause"
build = "build.rs"
edition = "2018"

[dependencies]
clap = "2.24.2"
git2 = "0.13.7"
rust-ini = "0.16.1"

[build-dependencies]
rustc_version = "0.2"
